--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         - id: Customer
           uri: http://localhost:8081
           predicates:
-            - Path=/orders/** /orderStatuses/**
+            - Path=/orders/**, /orderStatuses/**
         - id: SMSExternal
           uri: http://localhost:8082
           predicates:
@@ -46,7 +46,7 @@ spring:
         - id: Customer
           uri: http://Customer:8080
           predicates:
-            - Path=/orders/** /orderStatuses/**
+            - Path=/orders/**, /orderStatuses/**
         - id: SMSExternal
           uri: http://SMSExternal:8080
           predicates:
